...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/remove_good"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/ic_remove_good"/>
...
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:text="1"/>

                <ImageView
                    android:id="@+id/add_good"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/ic_add_good"/>
...
